<resources>
    <string name="app_name">Library App</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_add_book">Add Book</string>
    <string name="search_hint">Search by title…</string>
    <string name="add_book_btn">Save Book</string>
    <string name="title_hint">Title</string>
    <string name="author_hint">Author</string>
    <string name="year_hint">Publish Year</string>
    <string name="blurb_hint">Blurb (Description)</string>
    <string name="genre_hint">Genre</string>
    <string name="rating_hint">Rating (1-5)</string>
    <string name="pick_image">Choose Cover Image</string>
</resources>